--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,13 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
       "dest": "/index.html"
-    }
+    } 
   ]
 }
